--- a/Front-end-cloning/spotify-clone/index.html
+++ b/Front-end-cloning/spotify-clone/index.html
@@ -9,6 +9,7 @@
     <link rel="icon" href="assets/spotify-top.png">
 </head>
 <body>
+    <!-- Navbar -->
     <nav class="desktop-nav">
         <article>
             <div class="logo">
@@ -26,6 +27,7 @@
             </div>
         </article>
     </nav>
+    <!-- Home Section -->
     <section id="home">
         <article>
             <div class="phone">
@@ -42,6 +44,53 @@
                 <button class="btn">GET SPOTIFY FREE</button>
             </div>
         </article>
+    </section>
+    <!-- why-spotify section -->
+    <section id="about">
+        <h2>Why Spotify?</h2>
+        <div class="features">
+            <ol>
+                <li>
+                    <img src="assets/play-icon.png" alt="">
+                    <p class="heading">Play your favourites.</p>
+                    <p class="data">Listen to the songs you love, and discover new music and podcasts.</p>
+                </li>
+                <li>
+                    <img src="assets/library-icon.png" alt="">
+                    <p class="heading">Playlists made easy.</p>
+                    <p class="data">We'll help you make playlists. Or enjoy playlists made by music experts.</p>
+                </li>
+                <li>
+                    <img src="assets/like-icon.png" alt="">
+                    <p class="heading">Make it yours.</p>
+                    <p class="data">Tell us what you like, and we'll recommend music for you.</p>
+                </li>
+                <li>
+                    <img src="assets/lightning-icon.png" alt="">
+                    <p class="heading">Save mobile data.</p>
+                    <p class="data">To use less data when you play music, turn on Data Saver in Settings.</p>
+                </li>
+            </ol>
+        </div>
+
+    </section>
+    <!-- Free -->
+    <section id="free">
+        <p>It's free</p>
+        <p>No credit card required.</p>
+    </section>
+    <!-- questions -->
+    <section id="questions">
+        <h1>Got questions?</h1>
+    </section>
+    <!-- Lets play -->
+    <section id="ready">
+        <h1>
+            Ready? Let's play.
+        </h1>
+        <button class="btn">
+            GET SPOTIFY FREE
+        </button>
     </section>
 </body>
 </html>
