--- a/Front-end-cloning/spotify-clone/index.html
+++ b/Front-end-cloning/spotify-clone/index.html
@@ -82,7 +82,27 @@
     <!-- questions -->
     <section id="questions">
         <h1>Got questions?</h1>
+        <ol>
+           <li>
+            <p>How do I create a playlist?</p>
+            <svg role="img" height="24" width="24" aria-hidden="true" class="Svg-sc-ytk21e-0 ldgdZj sc-212df1af-2 biJcOI" viewBox="0 0 24 24" data-encore-id="icon"><path d="M2.793 15.957a1 1 0 0 0 1.414 0L12 8.164l7.793 7.793a1 1 0 1 0 1.414-1.414L12 5.336l-9.207 9.207a1 1 0 0 0 0 1.414z"></path></svg>
+           </li>
+           <li>
+            <p>How do I activate Data Saver mode?</p>
+            <svg role="img" height="24" width="24" aria-hidden="true" class="Svg-sc-ytk21e-0 ldgdZj sc-212df1af-2 biJcOI" viewBox="0 0 24 24" data-encore-id="icon"><path d="M2.793 15.957a1 1 0 0 0 1.414 0L12 8.164l7.793 7.793a1 1 0 1 0 1.414-1.414L12 5.336l-9.207 9.207a1 1 0 0 0 0 1.414z"></path></svg>
+           </li>
+           <li>
+            <p>Is it only possible to shuffle play music?</p>
+            <svg role="img" height="24" width="24" aria-hidden="true" class="Svg-sc-ytk21e-0 ldgdZj sc-212df1af-2 biJcOI" viewBox="0 0 24 24" data-encore-id="icon"><path d="M2.793 15.957a1 1 0 0 0 1.414 0L12 8.164l7.793 7.793a1 1 0 1 0 1.414-1.414L12 5.336l-9.207 9.207a1 1 0 0 0 0 1.414z"></path></svg>
+           </li>
+           <li>
+            <p>Where can I find Podcasts?</p>
+            <svg role="img" height="24" width="24" aria-hidden="true" class="Svg-sc-ytk21e-0 ldgdZj sc-212df1af-2 biJcOI" viewBox="0 0 24 24" data-encore-id="icon"><path d="M2.793 15.957a1 1 0 0 0 1.414 0L12 8.164l7.793 7.793a1 1 0 1 0 1.414-1.414L12 5.336l-9.207 9.207a1 1 0 0 0 0 1.414z"></path></svg>
+           </li>
+        </ol>
     </section>
+
+
     <!-- Lets play -->
     <section id="ready">
         <h1>
@@ -92,5 +112,6 @@
             GET SPOTIFY FREE
         </button>
     </section>
+<script src="script.js"></script>
 </body>
 </html>
